initialize front end

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>H2Go</title>
+    <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body>
 Hello World
+<script src="javascript/index.js"></script>
 </body>
 </html>
